chapter_kubernetes-overview/manifests/configmap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: configmap-pod
  name: configmap-pod
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
      name: nginx-port
      protocol: TCP
    volumeMounts:
    - name: nginx-html-file
      mountPath: /usr/share/nginx/html/index.html
      subPath: index.html
      readOnly: true
  volumes:
    - name: nginx-html-file
      configMap:
        name: handson-configmap
        items:
        - key: "index.html"
          path: "index.html"
