chapter_kubernetes-overview/manifests/kubectl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubectl-pod
spec:
  containers:
  - image: bitnami/kubectl
    name: kubectl
    command:
    - sh
    - -c
    - |
      while true
      do
        kubectl get pod
        sleep 30
      done
  serviceAccountName: handson-sa
