chapter_kubernetes-overview/manifests/netpol-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-app1
  labels:
    app: app1
spec:
  containers:
    - name: nginx-app1
      image: nginx:latest
      ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-app2
  labels:
    app: app2
spec:
  containers:
    - name: nginx-app2
      image: nginx:latest
      ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-app3
  labels:
    app: app3
spec:
  containers:
    - name: nginx-app3
      image: nginx:latest
      ports:
      - containerPort: 80
---
