chapter_kubernetes-overview/manifests/handson-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app3-app1
spec:
  podSelector:
    matchLabels:
      app: app3
  policyTypes:
  - Ingress
  - Egress 
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: app1
    ports:
    - protocol: TCP
      port: 80 
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: app1 
    ports:
    - protocol: TCP 
      port: 80 
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app1-app3
spec:
  podSelector:
    matchLabels:
      app: app1
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: app3
    ports:
    - protocol: TCP
      port: 80 
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: app3
    ports:
    - protocol: TCP
      port: 80
